--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
         
       </div>
 
-      <div class="credit">&copy; copyright @ 2022 by <span>mr.Chandan</span> | all rights reserved!</div>
+      <div class="credit">&copy; copyright @ 2022 by <span>mr.Appu</span> | all rights reserved!</div>
 
    </section>
 
